--- a/src/sdg/components/ChoiceGroup/Test/checkboxTest.html
+++ b/src/sdg/components/ChoiceGroup/Test/checkboxTest.html
@@ -1,6 +1,6 @@
 
 <qc-choice-group legend="Boutons de sélection"
-                tiled
+                selection-button
                 column-count="2"
                  name="tile-1"
 >
@@ -39,7 +39,7 @@
 
 <qc-choice-group legend="Boutons de sélection inline"
                 name="tile-2"
-                tiled
+                selection-button
                 inline
                 column-count="2"
 >
