--- a/src/sdg/components/ChoiceGroup/Test/radiosTest.html
+++ b/src/sdg/components/ChoiceGroup/Test/radiosTest.html
@@ -1,6 +1,6 @@
 
     <qc-choice-group legend="Boutons de sélection"
-                    tiled
+                    selection-button
                     column-count="2"
                      name="tile-1"
     >
@@ -36,7 +36,7 @@
     </qc-choice-group>
 
     <qc-choice-group legend="Boutons de sélection inline"
-                    tiled
+                    selection-button
                     inline
                     column-count="2"
                      name="tile-2"
