--- a/src/sdg/components/ChoiceGroup/_selectionButtons.html
+++ b/src/sdg/components/ChoiceGroup/_selectionButtons.html
@@ -4,7 +4,7 @@
 <qc-doc-exemple caption="Exemple de boutons radio au format de boutons de sélection avec différents états">
     <qc-choice-group legend="Sélectionnez une option :"
                     name="ex-radio-select"
-                    tiled
+                    selection-button
                     column-count="2"
     >
         <label>
@@ -44,7 +44,7 @@
     <qc-choice-group
             name="exemple-checkbox-select"
             legend="Sélectionnez vos options"
-            tiled
+            selection-button
             column-count="2">
         <label>
             <input type="checkbox"
@@ -80,7 +80,7 @@
 <qc-doc-exemple caption="Exemple de boutons radio au format de boutons de sélection sur une rangée">
     <qc-choice-group legend="Choisissez une option :"
                     name="ex-radio-select-inline"
-                    tiled
+                    selection-button
                     inline
     >
         <label>
