--- a/src/sdg/components/ChoiceGroup/_choiceGroup.html
+++ b/src/sdg/components/ChoiceGroup/_choiceGroup.html
@@ -260,7 +260,7 @@
       <td>Message d’erreur à afficher lorsque le groupe est invalide</td>
     </tr>
     <tr>
-      <td>tiled</td>
+      <td>selection-button</td>
       <td>na</td>
       <td>na</td>
       <td>Affiche les champs au format de boutons de sélection dans une grille</td>
