Renommage de la classe qc-textfield-row à qc-formfield-row

--- a/src/sdg/components/DropdownList/Test/dropdownListTest.html
+++ b/src/sdg/components/DropdownList/Test/dropdownListTest.html
@@ -45,7 +45,7 @@
 </div>
 
 <qc-select id="qc-select-multiple-choices" multiple>
-  <label for="select-multiple-choices">Choix multiple</label>
+  <label for="select-multiple-choices">Choix multiples</label>
   <select multiple id="select-multiple-choices">
     <option value="1">Option 1</option>
     <option value="2">Option 2</option>
@@ -66,7 +66,7 @@
   </select>
 </qc-select>
 
-<div class="qc-textfield-row">
+<div class="qc-formfield-row">
   <qc-select id="qc-select-invalid" multiple invalid>
     <label for="select-invalid">État invalide</label>
     <select multiple id="select-invalid">
@@ -127,7 +127,7 @@
           required
           invalid-text="Veuillez choisir un type de restaurant."
   >
-    <label for="dropdown-list-restaurants-select">Types de restaurant</label>
+    <label for="dropdown-list-restaurants-select">Types de restaurants</label>
     <select id="dropdown-list-restaurants-select" multiple>
       <option value="Pizzeria">Pizzeria</option>
       <option value="Pâtisserie">Pâtisserie</option>
