--- a/src/sdg/components/TextField/Test/textFieldTest.html
+++ b/src/sdg/components/TextField/Test/textFieldTest.html
@@ -48,7 +48,7 @@
     />
 </qc-textfield>
 
-<div class="qc-textfield-row">
+<div class="qc-formfield-row">
     <qc-textfield
             label="Combiné 1"
             size="sm"
@@ -68,7 +68,7 @@
         />
     </qc-textfield>
 </div>
-<div class="qc-textfield-row">
+<div class="qc-formfield-row">
     <qc-textfield
             label="Combiné 1 invalide"
             size="sm"
