--- a/public/css/qc-sdg-no-grid.css
+++ b/public/css/qc-sdg-no-grid.css
@@ -2005,6 +2005,28 @@ input[type=radio].qc-choicefield:checked.qc-compact::before {
   gap: var(--qc-spacer-md);
 }
 
+.qc-formfield-row {
+  display: flex;
+  gap: 0 3.2rem;
+  flex-wrap: wrap;
+  margin-bottom: 3.2rem;
+  margin-top: -0.8rem;
+}
+.qc-formfield-row > .qc-form-error {
+  width: 100%;
+}
+.qc-formfield-row qc-textfield,
+.qc-formfield-row .qc-textfield {
+  margin-top: var(--qc-spacer-xs);
+  display: block;
+  width: auto;
+  margin-bottom: 0;
+}
+.qc-formfield-row .qc-dropdown-list-root {
+  margin-top: var(--qc-spacer-xs);
+  margin-bottom: 0;
+}
+
 input[type=checkbox].qc-choicefield:checked {
   background-color: var(--qc-color-blue-regular) !important;
 }
@@ -2193,28 +2215,6 @@ qc-textfield textarea + .qc-textfield-charcount {
 .qc-textfield-charcount.qc-max-reached {
   color: var(--qc-color-red-regular);
   font-weight: var(--qc-font-weight-content-bold);
-}
-
-.qc-textfield-row {
-  display: flex;
-  gap: 0 3.2rem;
-  flex-wrap: wrap;
-  margin-bottom: 3.2rem;
-  margin-top: -0.8rem;
-}
-.qc-textfield-row > .qc-form-error {
-  width: 100%;
-}
-.qc-textfield-row qc-textfield,
-.qc-textfield-row .qc-textfield {
-  margin-top: var(--qc-spacer-xs);
-  display: block;
-  width: auto;
-  margin-bottom: 0;
-}
-.qc-textfield-row .qc-dropdown-list-root {
-  margin-top: var(--qc-spacer-xs);
-  margin-bottom: 0;
 }
 
 .qc-form-error {
