--- a/src/sdg/components/TextField/_textField.html
+++ b/src/sdg/components/TextField/_textField.html
@@ -25,7 +25,7 @@
       />
     </qc-textfield>
 
-    <div class="qc-textfield-row">
+    <div class="qc-formfield-row">
       <qc-textfield
               label="Téléphone"
               size="sm"
