Ajustement des exemples de la doc de liste déroulante

--- a/src/sdg/components/TextField/_textField.html
+++ b/src/sdg/components/TextField/_textField.html
@@ -83,7 +83,7 @@
   </script>
 </qc-doc-exemple>
 
-<qc-doc-exemple caption="Illustration des différentes tailles de champs texte.">
+<qc-doc-exemple id="textfield-sizes" caption="Illustration des différentes tailles de champs texte.">
 
     <qc-textfield
             label="Taille extra-petite"
