--- a/src/sdg/components/SearchInput/_searchInput.html
+++ b/src/sdg/components/SearchInput/_searchInput.html
@@ -25,6 +25,7 @@
             placeholder="Recherche désactivée"
             aria-label="Recherche désactivée"
             disabled
+            left-icon
             clear-aria-label="Effacer le texte"
     ></qc-search-input>
 </qc-doc-exemple>
