Ajout d'une propriété `id` générée par défaut pour `qc-search-input` et mise à jour des exemples dans la documentation.

--- a/src/sdg/components/SearchInput/_searchInput.html
+++ b/src/sdg/components/SearchInput/_searchInput.html
@@ -1,16 +1,16 @@
 <h2 id="search-input">Champ de recherche</h2>
 <h3>Exemples</h3>
 
-<qc-doc-exemple caption="Exemple de champ de recherche de base">
+<qc-doc-exemple caption="Exemples de champs de recherche">
     <qc-search-input
             placeholder="Rechercher un article"
             aria-label="Rechercher un article"
             clear-aria-label="Effacer le texte"
             left-icon
     ></qc-search-input>
-</qc-doc-exemple>
 
-<qc-doc-exemple caption="Champ avec une valeur initiale">
+    <br>
+
     <qc-search-input
             value="Climat"
             placeholder="Rechercher un sujet"
@@ -18,9 +18,9 @@
             clear-aria-label="Effacer le texte"
             left-icon
     ></qc-search-input>
-</qc-doc-exemple>
 
-<qc-doc-exemple caption="Champ désactivé">
+    <br>
+
     <qc-search-input
             placeholder="Recherche désactivée"
             aria-label="Recherche désactivée"
