Regroupement des exemples de liste déroulante

--- a/src/sdg/components/DropdownList/_select.html
+++ b/src/sdg/components/DropdownList/_select.html
@@ -6,7 +6,8 @@
     <qc-select id="qc-select-single-choice">
         <label for="select-single-choice">Choix unique</label>
         <select id="select-single-choice">
-            <option value="1" selected>Option 1</option>
+            <option value="" selected>Choisissez une option</option>
+            <option value="1">Option 1</option>
             <option value="2">Option 2</option>
             <option value="3">Option 3</option>
             <option value="4">Option 4</option>
@@ -42,7 +43,8 @@
     <qc-select id="qc-select-single-choice-search" enable-search>
         <label for="select-single-choice-search">Choix unique avec recherche</label>
         <select id="select-single-choice-search">
-            <option value="1" selected>Option 1</option>
+            <option value="" selected>Choisissez une option</option>
+            <option value="1">Option 1</option>
             <option value="2">Option 2</option>
             <option value="3">Option 3</option>
             <option value="4">Option 4</option>
@@ -57,7 +59,7 @@
             <option value="13">Option 13</option>
             <option value="14">Option 14</option>
             <option value="15">Option 15</option>
-            <option value="16" >Option 16</option>
+            <option value="16">Option 16</option>
         </select>
     </qc-select>
 
@@ -66,7 +68,8 @@
         <select multiple id="select-multiple-choices">
             <option value="1">Option 1</option>
             <option value="2" selected>Option 2</option>
-            <option value="3" selected disabled>Option 3 (désactivée)</option>
+            <option value="3" selected>Option 3</option>
+            <option value="4" disabled>Option 4 (désactivée)</option>
         </select>
     </qc-select>
 
