Icone - retrait des classes abstraites, remplacées par des vrais classes

--- a/src/sdg/bases/links/_links.scss
+++ b/src/sdg/bases/links/_links.scss
@@ -1,5 +1,6 @@
 @use "qc-sdg-lib" as *;
 @use "sass:math";
+@use "../../components/Icon/icons" as *;
 
 a {
   color: token-value(color, link, text);
@@ -22,7 +23,7 @@ a {
 }
 span.qc-ext-link-img {
 
-  @extend %icon-external-link;
+  @extend .icon-external-link;
   $ratio : math.div(11,16) * 1em;
   height: $ratio;
   width: $ratio;
