Simplification de la doc d'ajout HTML de qc-select

--- a/src/sdg/components/DropdownList/_select.html
+++ b/src/sdg/components/DropdownList/_select.html
@@ -268,14 +268,5 @@
     </table>
 </div>
 
-<h4>Précision concernant le DOM d’ombre (Shadow dom)</h4>
-<ul>
-    <li>Ce composant contient un DOM d'ombre.</li>
-    <li>
-        Les éléments suivants sont à ajouter dans le slot pour que la liste déroulante s'affiche correctement :
-        <ul>
-            <li><code>label</code></li>
-            <li><code>select</code></li>
-        </ul>
-    </li>
-</ul>
+<h3>Zone d'ajout de contenu HTML</h3>
+<p>Ce composant ne comporte qu'une seule zone d'ajout de contenu.</p>
