Doc incluse - réorganisation des sections

--- a/src/sdg/bases/Icon/IconDoc.ejs
+++ b/src/sdg/bases/Icon/IconDoc.ejs
@@ -1,5 +1,5 @@
 
-<h2 id="icons">Icônes (qc-icon)</h2>
+<h2 id="icons">Iconographie (qc-icon)</h2>
 
 <p> Le composant <code>qc-icon</code> permet d’afficher une icône avec la bonne couleur quel que soit le thème.</p>
 
