--- a/src/sdg/components/ChoiceGroup/_selectionButtons.html
+++ b/src/sdg/components/ChoiceGroup/_selectionButtons.html
@@ -1,6 +1,6 @@
-<h3 id="selection-button">Boutons de sélection</h3>
+<h4 id="selection-button">Boutons de sélection</h4>
 
-
+<h5>Exemples</h5>
 <qc-doc-exemple caption="Exemple de boutons radio sous forme de boutons de sélection avec différents états.">
     <qc-choice-group legend="Sélectionnez une option :"
                     name="ex-radio-select"
@@ -125,6 +125,6 @@
     </qc-choice-group>
 </qc-doc-exemple>
 
-<h4>Documentation technique</h4>
+<h5>Documentation technique</h5>
 <p>Voir <a href="#choice-group-doc">la documentation technique du composant qc-choice-group</a>.</p>
 
