--- a/src/sdg/bases/links/_links.scss
+++ b/src/sdg/bases/links/_links.scss
@@ -1,6 +1,6 @@
 @use "qc-sdg-lib" as *;
 @use "sass:math";
-@use "../../components/Icon/icons" as *;
+@use "../Icon/icons" as *;
 
 a {
   color: token-value(color, link, text);
