--- a/src/sdg/components/Checkbox/_checkbox.scss
+++ b/src/sdg/components/Checkbox/_checkbox.scss
@@ -1,6 +1,6 @@
 @use "qc-sdg-lib" as *;
 @use "../Fieldset/fieldset" as *;
-@use "../Icon/icons" as *;
+@use "../../bases/Icon/icons" as *;
 
 
 input[type="checkbox"].qc-choicefield {
