--- a/src/sdg/components/TextField/_textField.html
+++ b/src/sdg/components/TextField/_textField.html
@@ -1,5 +1,5 @@
-<h2 id="textfield">Champ texte</h2>
-
+<h3 id="textfield">Champ texte</h3>
+<h4>Exemples</h4>
 
 <qc-doc-exemple caption="Exemples 1 - différents champs de texte. Soumettre le formulaire pour voir les messages d'erreur.">
   <form id="formulaire-champs-textes">
@@ -131,14 +131,14 @@
 </qc-doc-exemple>
 
 
-<h3>Documentation technique</h3>
+<h4>Documentation technique</h4>
 
-<h4>Champs alignés horizontalement (classe <code>qc-textfield-row</code>)</h4>
+<h5>Champs alignés horizontalement (classe <code>qc-textfield-row</code>)</h5>
 
 <p>Les champs regroupés sur une ligne peuvent être placés dans un div avec la classe <code>qc-textfield-row</code>. De cette façon, les messages d'erreur ne provoquent pas de décalage. <br/>
   Voir le code des champs Téléphone et Poste dans l'exemple ci-dessus.</p>
 
-<h4>Attributs</h4>
+<h5>Attributs</h5>
 <div class="table-overflow">
   <table class="qc-table qc-striped component-attributes-description">
     <thead>
@@ -207,7 +207,7 @@
   </table>
 </div>
 
-<h4>Propriété js</h4>
+<h5>Propriété js</h5>
 <div class="table-overflow">
   <table class="qc-table qc-striped component-attributes-description">
     <thead>
@@ -233,6 +233,6 @@
   </table>
 </div>
 
-<h4>Zone d’ajout de contenu HTML</h4>
+<h5>Zone d’ajout de contenu HTML</h5>
 
 <p>Ce composant ne comporte qu'une seule zone d'ajout de contenu par défaut.</p>
