--- a/src/sdg/scss/qc-sgd-no-grid.scss
+++ b/src/sdg/scss/qc-sgd-no-grid.scss
@@ -14,7 +14,7 @@
 @use "utilities/display";
 @use "utilities/themes";
 @use "utilities/states";
-@use "../components/Icon/icons";
+@use "../bases/Icon/icons";
 @use "../components/IconButton/iconButton";
 @use "../components/Notice/notice";
 @use "../components/PivHeader/pivHeader";
