Mise à jour de tests pour couvrir l'option vide en placeholder

--- a/src/sdg/components/DropdownList/Test/dropdownListTest.html
+++ b/src/sdg/components/DropdownList/Test/dropdownListTest.html
@@ -127,7 +127,8 @@
           invalid-text="Veuillez choisir un type de restaurant."
   >
     <label for="dropdown-list-restaurants-select">Types de restaurants</label>
-    <select id="dropdown-list-restaurants-select" multiple>
+    <select id="dropdown-list-restaurants-select">
+      <option value="">Types de restaurants</option>
       <option value="Pizzeria">Pizzeria</option>
       <option value="Pâtisserie">Pâtisserie</option>
       <option value="Steakhouse">Steakhouse</option>
