--- a/src/sdg/components/TextField/_textField.html
+++ b/src/sdg/components/TextField/_textField.html
@@ -133,12 +133,7 @@
 
 <h4>Documentation technique</h4>
 
-<h5>Champs alignés horizontalement (classe <code>qc-textfield-row</code>)</h5>
-
-<p>Les champs regroupés sur une ligne peuvent être placés dans un div avec la classe <code>qc-textfield-row</code>. De cette façon, les messages d'erreur ne provoquent pas de décalage. <br/>
-  Voir le code des champs Téléphone et Poste dans l'exemple ci-dessus.</p>
-
-<h5>Attributs</h5>
+<h4>Attributs</h4>
 <div class="table-overflow">
   <table class="qc-table qc-striped component-attributes-description">
     <thead>
@@ -193,7 +188,7 @@
         <dd>La limite de caractères du champ XXX est dépassée.</dd>
         <dt>Anglais</dt>
         <dd>XXX field is required.</dd>
-        <dd>The character limit for the ${label} field has been exceeded..</dd>
+        <dd>The character limit for the ${label} field has been exceeded.</dd>
       </dl>
       </td>
     </tr>
@@ -207,7 +202,12 @@
   </table>
 </div>
 
-<h5>Propriété js</h5>
+<h4>Champs alignés horizontalement (classe <code>qc-textfield-row</code>)</h4>
+
+<p>Les champs regroupés sur une ligne peuvent être placés dans un div avec la classe <code>qc-textfield-row</code>. De cette façon, les messages d'erreur ne provoquent pas de décalage. <br/>
+    Voir le code des champs Téléphone et Poste dans l'exemple ci-dessus.</p>
+
+<h4>Propriété js</h4>
 <div class="table-overflow">
   <table class="qc-table qc-striped component-attributes-description">
     <thead>
