Formulaires - ajustements de la doc (titre et ordre)

--- a/src/sdg/components/ChoiceGroup/_choiceGroup.html
+++ b/src/sdg/components/ChoiceGroup/_choiceGroup.html
@@ -5,7 +5,7 @@
   Les groupes d'éléments de choix sont également disponibles sous forme de <a href="#selection-button">boutons de sélection</a>.
 </p>
 
-<qc-doc-exemple caption="Exemple d’un groupe de cases à cocher avec différents états">
+<qc-doc-exemple caption="Exemple de groupes de boutons radio et de cases à cocher avec différents états">
   <qc-choice-group legend="Sélectionnez vos options"
                    name="options-multiples"
   >
