--- a/src/sdg/components/Notice/_notice.html
+++ b/src/sdg/components/Notice/_notice.html
@@ -2,7 +2,7 @@
 <h3>Exemples</h3>
 
 <qc-doc-exemple id="exemple-avis-neutre"
-                caption="Exemple d’avis neutres"
+                caption="Exemple d’avis complémentaires"
 >
   <qc-notice type="advice"
              icon="ligth-bulb"
@@ -29,12 +29,12 @@
                 caption="Exemple d’avertissement (avec et sans <i><code>slot</code></i>)"
 >
   <qc-notice type="warning"
-             title="Migration des <i>contenus</i>"
+             title="Migration des contenus"
              content="Les contenus seront transférés dans Québec.ca à partir du 16 février et le site sera fermé le 20 avril.">
   </qc-notice>
 
   <qc-notice type="warning">
-    <h2>Migration des <i>contenus</i></h2>
+    <h2>Migration des contenus</h2>
     <p>Les contenus seront transférés dans Québec.ca à partir du 16 février et le site sera fermé le 20
       avril.</p>
   </qc-notice>
@@ -58,7 +58,7 @@
                 caption="Exemple d’avis d’erreur"
 >
   <qc-notice type="error"
-             title="Des erreurs sont présentes dans le formulaire.">
+             title="Des erreurs sont présentes dans le formulaire :">
     <ul>
       <li>
         <a href="javascript:;">Le champ « Nom de famille » est obligatoire ;</a>
