--- a/src/sdg/components/SearchBar/_searchBar.html
+++ b/src/sdg/components/SearchBar/_searchBar.html
@@ -1,6 +1,6 @@
 <h2 id="search-bar">Barre de recherche</h2>
 <h3>Exemples</h3>
-<qc-doc-exemple caption="Exemple de barre de recherche lançant une recherche dans quebec.ca">
+<qc-doc-exemple caption="Exemple de barre de recherche">
   <form action="http://www.quebec.ca/resultats-de-recherche">
     <qc-search-bar name="tx_solr[q]"></qc-search-bar>
   </form>
