Pied de page PIV - ajustement de la doc

--- a/src/sdg/components/Button/_button.html
+++ b/src/sdg/components/Button/_button.html
@@ -116,13 +116,13 @@
 <qc-doc-exemple caption="Exemples de boutons avec icône.<br/>NB: voir la section <a href='#icons'>Icônes</a> pour plus de détails concernant le composant <code>qc-icon</code>.">
     <div>
         <button class="qc-button qc-primary">
-            <qc-icon type="plus"></qc-icon>
-            Ajouter
+            <qc-icon type="arrow-up" rotate="-90"></qc-icon>
+            Précédent
         </button>
 
         <button class="qc-button qc-primary">
-            Information
-            <qc-icon type="information"></qc-icon>
+            Suivant
+            <qc-icon type="arrow-up" rotate="90"></qc-icon>
         </button>
     </div>
 </qc-doc-exemple>
