--- a/src/sdg/components/PivFooter/_pivFooter.html
+++ b/src/sdg/components/PivFooter/_pivFooter.html
@@ -29,10 +29,8 @@
   >
     <nav aria-label="Navigation du pied de page">
       <ul>
-        <li><a href="/">Accessibilité</a></li>
-        <li><a href="/">Plan du site</a></li>
-        <li><a href="/">S'informer sur clicSÉQUR - Citoyens</a></li>
-        <li><a href="/">FAQ</a></li>
+        <li><a href="/">Accès à l’information</a></li>
+        <li><a href="/">Politique de confidentialité</a></li>
       </ul>
     </nav>
     <qc-external-link slot="copyright">
